feat: Introduce Timetable, Settings, and Chat pages, refactor Appwrite integration, and remove legacy setup scripts.

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ VITE_APPWRITE_MESSAGES_COLLECTION_ID=69945f67003350f65039
 VITE_APPWRITE_BUCKET_ID=studentcompanion
 VITE_APPWRITE_SCHEDULES_COLLECTION_ID=699462ff0015de469a72
 VITE_APPWRITE_NOTIFICATIONS_COLLECTION_ID=69946b57001500470d49
+VITE_APPWRITE_HELP_QUESTIONS_COLLECTION_ID=help_questions
+VITE_APPWRITE_HELP_ANSWERS_COLLECTION_ID=help_answers
+VITE_APPWRITE_PROFILES_COLLECTION_ID=profiles
